--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -18,7 +18,6 @@
             <li class="nav-item">
                 <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
             </li>
-
         </ul>
 
         @if (accountService.currentUser()) {
@@ -27,14 +26,13 @@
                 Welcome {{accountService.currentUser()?.username | titlecase}}
             </a>
             <div *dropdownMenu class="dropdown-menu">
-                <a class="dropdown-item">Edit profile</a>
+                <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" (click)="logout()">Logout</a>
             </div>
         </div>
         }
 
-        
         @if (!accountService.currentUser()) {
         <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
             <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
@@ -43,7 +41,5 @@
             <button class="btn btn-success" type="submit">Login</button>
         </form>
         }
-
     </div>
-
 </nav>
