--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -5,13 +5,11 @@
     </div>
     <div class="col-8">
         @if (editForm.dirty) {
-                    <div class="alert alert-info pb-0">
+        <div class="alert alert-info pb-0">
             <p><strong>Information: </strong>
                 You have made changes. Any unsaved changes will be lost</p>
         </div>
-
         }
-
     </div>
     <div class="col-4">
         <div class="card">
@@ -38,8 +36,12 @@
                 </div>
             </div>
             <div class="card-footer">
-                <button [disabled]="!editForm.dirty"
-                form="editForm" type="submit" class="btn btn-success col-12">Save changes</button>
+                <button 
+                [disabled]="!editForm.dirty" 
+                form="editForm" 
+                type="submit" 
+                class="btn btn-success col-12">Save changes
+            </button>
             </div>
         </div>
     </div>
@@ -47,17 +49,29 @@
     <div class="col-8">
         <tabset class="member-tabset">
             <tab heading="About {{member.knownAs}}">
-                <form id="editForm" #editForm="ngForm" (ngSubmit)="updateMember()">
+                <form id="editForm" #editForm="ngForm" (ngSubmit)="updateMember()">                    
                     <h4 class="mt-2">Description</h4>
-                    <textarea class="form-control" name="introduction" [(ngModel)]="member.introduction" rows="6">
+                    <textarea 
+                    class="form-control" 
+                    name="introduction" 
+                    [(ngModel)]="member.introduction" 
+                    rows="6">
                     </textarea>
 
                     <h4 class="mt-2">Looking for</h4>
-                    <textarea class="form-control" name="lookingFor" [(ngModel)]="member.lookingFor" rows="6">
+                    <textarea 
+                    class="form-control" 
+                    name="lookingFor" 
+                    [(ngModel)]="member.lookingFor" 
+                    rows="6">
                     </textarea>
 
                     <h4 class="mt-2">Interests</h4>
-                    <textarea class="form-control" name="interests" [(ngModel)]="member.interests" rows="6">               
+                    <textarea 
+                    class="form-control" 
+                    name="interests" 
+                    [(ngModel)]="member.interests" 
+                    rows="6">
                     </textarea>
 
                     <h4 class="mt-2">Location Details</h4>
